# Femto

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  editor.cpp  editor.h  formatstring.cpp  formatstring.h  main.cpp  terminal.cpp  terminal.h  textbuffer.cpp  textbuffer.h  utils.h
